Fix history buttons font and product picture modal - on small mobiles

--- a/components/atoms/Modal.module.scss
+++ b/components/atoms/Modal.module.scss
@@ -134,6 +134,13 @@
   .productImagesModalContainer {
     .productImagesModal {
       width: 70%;
+
+      .activeImage {
+        img {
+          height: 50vh;
+          width: auto;
+        }
+      }
     }
   }
 }
